# prometheus-python-golang-rust

./: README.md  compose-adot-collector.yaml  compose-prometheus.yaml
adot-config/: collector-config.yaml
axum/: Cargo.toml  Dockerfile
axum/src/: handlers.rs  main.rs  server.rs
axum/src/handlers/: health_check.rs  movies.rs
axum/src/server/: init.rs  observability.rs  router.rs  state.rs
echo/: Dockerfile  go.mod  go.sum  main.go
echo/handler/: health_check.go  movies.go
echo/observability/: custom_metrics.go
echo/server/: router.go
flask/: Dockerfile  app.py  pyproject.toml
img/: prometheus-adot.drawio  prometheus-scrape.drawio
prometheus-config/: prometheus-only-itself.yaml  prometheus.yaml
